[tool.poetry]
name = "deep-ast"
version = "0.0.0"
description = "Walks the entire AST tree, including calls to other functions."
readme = "README.md"
authors = ["Levi Blaney <shadycuz@gmail.com>"]
repository = "https://github.com/DontShaveTheYak/deep-ast"
keywords = ["ast", "AST", "testing", "compile", "parsing", "conversion"]
license = "GPL-3.0-only"

[tool.poetry.scripts]
deep-ast = "deep_ast.app:cli"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.2"
click-log = "^0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
flake8 = "^5.0.0"
flake8-black = "^0.3.3"
coverage = {extras = ["toml"], version = "^6.4.2"}
pytest-cov = "^4.0.0"
mypy = "^0.991"
typing-extensions = { version = "^4.3.0", python = "~3.7" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["deep_ast"]

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "black"